test/error/undefined.ss
g = 5
# -> type error
